styles/globals.css
@import "highlight.js/styles/base16/gruvbox-dark-medium.css";
/**
 * This injects Tailwind's base styles and any base styles registered by
 * plugins.
 */
@tailwind base;

/**
  * This injects Tailwind's component classes and any component classes
  * registered by plugins.
  */
@tailwind components;

/**
  * This injects Tailwind's utility classes and any utility classes registered
  * by plugins.
  */
@tailwind utilities;

:root {
  --v-orange: #eb4a2e;
  --v-black: #1d3131;
  --v-beige: #fcf8ed;
}

/**
  * Font-sizes

  * Website title: 3rem / 5xl

  * Prose
  * h1: 2.25rem / 4xl
  * h2: 1.5rem / 2xl
  * h3: 1.25rem / text-xl
  * h4: inherit
  */

html {
  @apply bg-v-beige text-v-black;
  /* fix layout shift on scrollbar, src: https://stackoverflow.com/a/39289453/7138644 */
  overflow-x: hidden;
  margin-right: calc(-1 * (100vw - 100%));
}

/* body,
#__next,
.garage {
  min-height: 100vh;
} */

/* FIXME: temp tailwind to make about page look OK  */
.about p {
  @apply pb-3;
}
.about h2 {
  @apply pb-4;
}
.about .wrapper-of-me {
  @apply pb-4;
}
.about section,
.about footer {
  @apply pt-4;
}
/* FIX THE ABOVE */

@layer utilities {
  .v-layout-full {
    @apply col-span-full;
  }

  .v-layout-core {
    @apply md:col-start-1 md:col-end-8 col-span-full;
  }

  .v-layout-right {
    @apply md:col-start-9 md:col-end-13 col-span-full;
  }

  .v-h-remaining-screen {
    /* screen        - header size - header spacing - page spacing */
    /* tailwind`ish  - h-24        - p-4            - p-5 */
    height: calc(100vh - 6rem - 1rem - 1.25rem);
  }

  .v-underline {
    text-decoration-line: underline;
    text-underline-position: under;
    text-underline-offset: 1px;
    cursor: pointer;
  }
}

@layer base {
  .v-main-nav a {
    @apply v-underline;
  }
  .v-main-nav a.active,
  .v-main-nav a:active {
    text-decoration-color: var(--v-orange);
    text-decoration-thickness: 2.5px;
  }

  .v-social-icons a svg {
    fill: currentColor;
  }
  .v-social-icons a:hover .border {
    fill: var(--v-orange);
  }

  .v-underline-links a {
    @apply v-underline;
    text-decoration-thickness: 1px;
  }

  .v-underline-links a:visited[target="_blank"] {
    text-decoration-color: purple;
  }

  a:hover:not(.active) {
    @apply v-underline;
    text-decoration-color: var(--v-black);
    text-decoration-thickness: 2.5px;
  }

  .goto-button {
    @apply font-mono no-underline text-gray-350 hover:text-gray-400;
  }

  #top .goto-button,
  #jembottom .goto-button {
    visibility: hidden;
  }

  #top:hover .goto-button,
  #jembottom:hover .goto-button {
    visibility: visible;
  }

  .v-home-flex {
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
  }

  .v-home-flex > * {
    @apply flex-initial;
  }

  @screen md {
    .v-home-flex > * {
      flex: 0 1 50%;
    }
    .v-home-flex .basis-75 {
      flex-basis: 75%;
    }
    .v-home-flex .basis-50 {
      flex-basis: 50%;
    }
    .v-home-flex .basis-25 {
      flex-basis: 25%;
    }
  }

  .blog-list ul li::marker {
    @apply text-sm text-gray-500;
  }

  /**
   * MDX
   */

  /* ! Important, do not div tag @apply, div is used to break out of it from within mdx */

  .v-layout .nextjs-image-wrapper {
    @apply v-layout-full;
    /* grid-column: span 12 !important; */
  }

  /* Code blocks are wrapped in pre, inline code wrapped in whatever parent *
  /* .v-layout code, */
  .v-layout > pre,
  .v-layout > hr {
    @apply v-layout-full;
  }

  .v-layout > h1,
  .v-layout > h2,
  .v-layout > h3,
  .v-layout > h4,
  .v-layout > h5,
  .v-layout > h6,
  .v-layout > p,
  .v-layout > ul,
  .v-layout > ol,
  /* .v-layout li, */
  .v-layout > blockquote,
  .v-layout > em,
  .v-layout > strong {
    @apply v-layout-core;
  }

  /* GitHub flavored markdown (GFM) */
  .v-layout > del,
  .v-layout > table,
  .v-layout > tbody,
  .v-layout > td,
  .v-layout > th,
  .v-layout > thead,
  .v-layout > tr {
    @apply v-layout-core;
  }

  /* TODO: Displaye footnotes as sidenotes on desktop */
}

/**
 * Customize @tailwindcss/typography
 */

* {
  /* border: 1px groove; */
}

/*
  Heads up, margins don't collapse because I'm using grid.
  Elements are treated as horizontal siblings
  from the spec: "the margins of adjacent grid items do not collapse."

  Fine. I'll collapse them myself v.v
 */

.prose * + h1,
.prose * + h2,
.prose * + h3,
.prose * + h4 {
  @apply mt-2;
}

.prose li + li {
  @apply mt-1;
}

.prose p > img {
  display: initial;
  vertical-align: initial;
}

.prose .anchor {
  float: left;
  text-decoration: none;
  @apply -ml-5;
}

svg.jamicon {
  display: inline-block;
}

.autolink svg {
  @apply md:invisible;
}

h1:hover .autolink svg,
h2:hover .autolink svg,
h3:hover .autolink svg,
h4:hover .autolink svg,
h5:hover .autolink svg,
h6:hover .autolink svg,
h1 .autolink:focus svg,
h2 .autolink:focus svg,
h3 .autolink:focus svg,
h4 .autolink:focus svg,
h5 .autolink:focus svg,
h6 .autolink:focus svg {
  @apply md:visible;
}

.prose table {
  display: block;
  width: max-content;
  max-width: 100%;
  overflow: auto;
}

.prose thead,
.prose tbody tr {
  @apply border-gray-350;
}

.prose thead th,
.prose tbody td {
  @apply p-2 align-middle border border-gray-350;
}

.prose blockquote {
  @apply px-4 mb-4 italic text-gray-500 border-l-4 border-gray-350;
}
.prose blockquote p {
  margin-bottom: 0;
}

.prose hr {
  @apply mt-2 mb-4 border-t-2 border-gray-350;
}

/**
 * Customize highlight.js
 */

.hljs {
  @apply mb-4 overflow-x-auto;
  font-size: 14px;
}

.inline-code,
:not(pre) > code {
  @apply rounded;
  color: #d5c4a1;
  background: #282828;
  padding: 0.15em 0.2em 0.05em 0.15rem;
  white-space: normal;
}

pre[class*="language-"]::selection,
pre[class*="language-"] ::selection,
code[class*="language-"]::selection,
code[class*="language-"] ::selection {
  /* dark-medium */
  color: #282828;
  background: #d5c4a1;

  /* Prism gruvbox theme references */
  /* light gruvbox https://github.com/PrismJS/prism-themes/blob/master/themes/prism-gruvbox-light.css */
  /* color: #282828;
  background: #a89984; */
  /* dark gruvbox https://github.com/PrismJS/prism-themes/blob/master/themes/prism-gruvbox-dark.css */
  /* color: #fbf1c7;
  background: #7c6f64; */
}

